testsuite/tests/dependent/should_fail/T14066e.stderr

T14066e.hs:13:59: error:
    • Couldn't match kind ‘k’ with ‘*’
      ‘k’ is a rigid type variable bound by
        the type signature for:
          j :: forall {k} {k1} (c :: k) (b :: k1).
               Proxy a -> Proxy b -> Proxy c -> Proxy b
        at T14066e.hs:12:5-61
      When matching kinds
        k1 :: *
        c :: k
      Expected kind ‘c’, but ‘b'’ has kind ‘k1’
    • In the first argument of ‘Proxy’, namely ‘(b' :: c')’
      In an expression type signature: Proxy (b' :: c')
      In the expression: p1 :: Proxy (b' :: c')
    • Relevant bindings include
        p2 :: Proxy c (bound at T14066e.hs:13:27)
        p1 :: Proxy b (bound at T14066e.hs:13:10)
        j :: Proxy a -> Proxy b -> Proxy c -> Proxy b
          (bound at T14066e.hs:13:5)
